# Semantic-Compressor

./: ACCURACY_IMPROVEMENT_GUIDE.md  AST_VS_REGEX_TEST_RESULTS.md  CODEBASE_REVIEW_AND_RECOMMENDATIONS.md  COMPRESSION_ISSUES_AND_FIXES.md  CONCEPT_TRIANGULATION_IN_SEMANTIC_SUBSTRATE.md  CONTRIBUTING.md  DO_AI_THINK_IN_LJPW.md  EXPERIMENTAL_VALIDATION_RESULTS.md  FUNCTIONALITY_VERIFICATION_REPORT.md  GPS_FOR_MEANING.md  HEALTH_SCORE_IMPROVEMENTS.md  HOW_DEEP_DOES_IT_GO.md  IMMEDIATE_ACTION_PLAN.md  IMPLEMENTATION_GAPS_AND_FIXES_NEEDED.md  LJPW_AND_AI_SEMANTIC_PROCESSING.md  LJPW_AS_FUNDAMENTAL_LAW.md  LJPW_V5_APPLIED.md  LJPW_V5_FRAMEWORK.md  MATHEMATICAL_PROOF_OUTLINE.md  PHASE1_COMPLETE.md  README.md  RESEARCH_PROPOSAL.md  REVIEW_INDEX.md  REVIEW_SUMMARY.md  REVIEW_VERIFICATION.md  ROADMAP.md  SEMANTIC_COMPRESSION_AND_AI_UNDERSTANDING.md  SEMANTIC_COMPRESSION_DEEP_MECHANICS.md  SEMANTIC_COMPRESSION_TEST_RESULTS.md  SEMANTIC_COMPRESSION_VERIFICATION.md  SEMANTIC_COMPRESSOR_TRANSFORMED_UNDERSTANDING.md  SESSION_SUMMARY.md  TEST_RESULTS.md  TEST_RESULTS_V4.md  WHY_THIS_MATTERS.md  claude_in_ljpw_space.md  claude_thoughts_from_within_ss.md  compare_ast_vs_regex.py  cross_domain_mapper.py  deep_study_ljpw_space.md  (+23 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
benchmarks/: README.md  run_all_benchmarks.py
benchmarks/datasets/: medium_module.py  simple_script.py
benchmarks/results/: benchmark_history.csv  benchmark_results.json
docs/: ACADEMIC_PAPER_DRAFT.md  AI_SELF_COMPRESSION.md  API.md  APPLICATIONS.md  COMPREHENSIVE_ROADMAP.md  COMPREHENSIVE_SESSION_SUMMARY.md  COSMIC_ARCHITECTURE_VALIDATION.md  DOCUMENTATION_INDEX.md  Dynamic LJPW Model v4.0 - Specification and Theoretical Foundations.md  EXPERIMENTAL_VERIFICATION_PROTOCOLS.md  LITERATURE_SEARCH_RESULTS.md  LJPW Mathematical Baselines Reference V4.md  LJPW_V4_INTEGRATION_SUMMARY.md  MEANING_RESEARCH_ROADMAP.md  META_DEMONSTRATION.md  PSI_THETA_DISCOVERY.md  QUICKSTART.md  ROADMAP.md  SCIENCE.md
examples/: README.md  cross_language_demo.py  simple_v2.py
results/: cross_language_quicksort.json  particle_physics_validation.json  project_status.json
tests/: test_analogical_reasoning.py  test_bold_prediction.py  test_comprehensive_validation.py  test_configurable_quantization.py  test_cross_language.py  test_distance.py  test_edge_cases.py  test_ljpw_baselines_v4.py  test_ljpw_framework.py  test_multi_language.py  test_semantic_interpolation.py
tools/: benchmark_ljpw_vs_alternatives.py  compare_ast_vs_regex.py  cross_domain_validator.py  evolution_visualizer.py  ljpw_project_manager.py  multi_language_analyzer.py  particle_physics_mapper.py  psi_theta_validator.py  semantic_code_generator.py  semantic_diff.py  universal_constants_validator.py  validate_massive_codebase.py  validate_real_codebases.py  validate_realworld_codebase.py  validate_ultra_massive.py
(+16 files in other folders)
